<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:theme="@style/Theme.Geoqq.GeoChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MaterialCardView.Circular"
            app:cardBackgroundColor="@color/green_dark_soft"
            app:contentPadding="24dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                style="@style/MaterialCardView.Circular"
                app:cardBackgroundColor="@color/green_light">

                <LinearLayout
                    android:id="@+id/form_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_min="wrap"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_logo"
                        style="@style/ScreenHeaderMaterialTextView.AppLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_logo_name"/>

                    <include
                        android:id="@+id/login_input"
                        layout="@layout/component_medium_text_input"
                        app:inputHint="@{@string/login_hint}"/>

                    <include
                        android:id="@+id/password_input"
                        layout="@layout/component_medium_password_input"
                        app:inputHint="@{@string/password_hint}" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/sign_in_button_caption"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form"
            app:icon="@drawable/ic_arrow_right"
            android:text="@string/sign_up_button_caption"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>