<?xml version="1.0" encoding="utf-8"?>
<com.qubacy.geoqq.ui.common.visual.component.loadingscreen.LoadingScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/max_elevation"
    tools:theme="@style/Theme.Geoqq.GeoChat">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:alpha="0.5" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loading_indicator"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:indicatorSize="64dp"
        app:indicatorColor="?attr/colorPrimary"
        app:trackColor="@android:color/transparent"
        android:indeterminate="true"
        app:trackThickness="8dp"
        tools:progress="50" />

</com.qubacy.geoqq.ui.common.visual.component.loadingscreen.LoadingScreen>